[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MC_exchange"
version = "1.0.1"
authors = [
  { name="Balint Magyari", email="balint.magyari@unina.it" },
]
description = "MC Bond Exchange for LAMMPS Simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lammps",
  "mpi4py",
  "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

# Testing tools, not required to be installed for regular users
[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/balintmagyari/MC_exchange"